--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ optional = true
 Sphinx = "6.2.1"
 sphinx-rtd-theme = "1.2.0"
 alabaster = "0.7.13"
+sphinx_mdinclude = "0.5.3"
 
 [tool.poetry.group.dev]
 optional = true
