--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ sphinx_mdinclude = "0.5.3"
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "3.3.2"
+pre-commit = "^3.3.2"
 pytest = "7.3.1"
 pytest-cov = "4.0.0"
 pylint = "2.17.4"
